--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.5.1",
     "helmet": "^5.1.1",
-    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
