--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "rate-limiter": "^0.2.0",
-    "xss-clean": "^0.1.1"
+    "swagger-ui-express": "^4.5.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
